Changes to CollisionUtils:
 - Fixed getCollisionPoint(Vector2f lineStart, Vector2f lineEnd,
   CombatEntityAPI target) returning null if entire line was within target's
   bounds without touching a bounds segment (now returns copy of lineStart)
 - getNearestPointOnBounds() no longer requires you to call bounds.update();
   as with all other CollisionUtils methods it now calls update() itself
Changes to LazyFont:
 - Fixed display of fonts whose texture scaling doesn't match their texture size
   (credit to Psiyon for the bug report and the fix)
 - Added buildUntilLimit(String line, float fontSize, float maxWidth), which
   returns a substring of line that will fit within maxWidth width
 - Unicode smart quotes (single and double) are converted into basic quotes
 - Attempting to create a DrawableString with missing character data will only
   log a warning once per missing character, instead of every time one is used
   (explanation: if the font doesn't define Ç, it will log a warning the first
    time you try to draw one while replacing the missing character with either
    a question mark, or empty space if the font doesn't define a question mark)
 - LazyFont.loadFont() will now make up fake data for a space character if the
   font file lacks one (it creates an invisible pixel with extra padding)
 - Cached fallback char used when font doesn't contain a requested character;
   very slight performance improvement
 - Added missing Javadoc to LazyChar
Removed org.lazywizard.lazylib.campaign.orbits.KeplerOrbit
 - Removed at the request of its contributor
Removed from org.lazywizard.lazylib.ui.LazyFont:
 - Removed drawText(); use createText() instead
 - Removed appendText(); use append() instead
 - Removed getColor() and setColor(); use get/setBaseColor() instead
 - Removed checkRebuild(); use triggerRebuildIfNeeded() instead

 2.8b (February 02, 2024)
==========================
Updated to be compatible with Starsector 0.97a
Changes to LazyFont: